# Diacritice-docx

./: .gitignore  AGENTS.md  README.md  config.json  corecteaza_diacritice.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-13-corector-diacritice-docx-plan.md
src/: extractor.py  mapper.py  model.py
tests/: test_e2e.py  test_extractor.py  test_mapper.py  test_model.py
