[project]
name = "corector-diacritice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.60.0",
]

[project.scripts]
corecteaza = "corecteaza_diacritice:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
